--- a/index.css
+++ b/index.css
@@ -22,3 +22,13 @@ body {
   margin-left: 5%;
   margin-top: 20%;
 }
+
+.more-details {
+  background-color: transparent;
+  border: none;
+  margin-left: 10%;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  font-weight: bold;
+}
