--- a/index.css
+++ b/index.css
@@ -32,3 +32,25 @@ body {
   color: white;
   font-weight: bold;
 }
+
+.facebook {
+  background-color: transparent;
+  border: none;
+  bottom: 10%;
+  right: 1.3%;
+  font-size: 30px;
+  color: white;
+  font-weight: bold;
+  position: fixed;
+}
+
+.instagram {
+  background-color: transparent;
+  border: none;
+  bottom: 1%;
+  right: 1%;
+  font-size: 30px;
+  color: white;
+  font-weight: bold;
+  position: fixed;
+}
