--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ body {
 }
 
 .explore {
-  font-size: 200px;
+  font-size: 15vw;
   font-family: Arial, Helvetica, sans-serif;
   color: white;
   font-weight: bold;
